# raum

./: .gitignore  Cargo.toml  README.md
src/: camera copy.rs  camera.rs  challenge.rs  lib.rs  main.rs  mod.rs  model-old.rs  shader.wgsl
src/_archive/: functioning_updated_plane_shader.wgsl  model.rs  old_wobbly_plane_shader.wgsl  resources.rs
src/_archive/instanced_geometry/: mod.rs  vertex.rs
src/app/: event.rs  mod.rs  window.rs
src/camera/: binding.rs  controller.rs  mod.rs  uniform.rs
src/geometry/: instance.rs  vertex.rs
src/renderer/: guide.rs  mod.rs  old.rs  shared.rs
src/scenes/: mod.rs  raymarch_volume.rs  wave_plane.rs
src/shaders/: cube_shader.wgsl  line_shader.wgsl  plane_shader.wgsl  raymarch_shader.wgsl  shader.wgsl  signal_shader.wgsl  well_shader.wgsl
src/state/: mod.rs
src/texture/: mod.rs
