[package]
name = "raum"
version = "0.3.0"
authors = ["Dan Niels"]
edition = "2021"

# [[bin]]
# name = "raum-main"
# path = "src/main.rs"

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
anyhow = "1.0"
bytemuck = { version = "1.12", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.11"
pollster = "0.3"
log = "0.4"
wgpu = "0.16"
winit = "0.28"
instant = "0.1"
rand = "0.8"
lazy_static = "1.4.0"
csv = "1.1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "0.16", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
